# heartxxy

./: .copier-answers.yml  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: release.yml
buildSrc/src/main/kotlin/pregxxy/: java.gradle.kts  minecraft.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/pregxxy/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/io/github/soccyuwu/pregxxy/mixin/: AllayAccessor.java
common/src/main/java/io/github/soccyuwu/pregxxy/mixin/accessor/: InvokerAllay.java
common/src/main/kotlin/io/github/soccyuwu/pregxxy/: Pregxxy.kt  PregxxyAbstractions.kt  PregxxyClient.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/casting/actions/spells/: OpBreed.kt  OpCongratulate.kt  OpGetAge.kt  OpNurture.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/casting/actions/spells/great/: OpGreaterBreed.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/casting/mishaps/: MishapCantBreed.kt  MishapCantNurture.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/config/: PregxxyConfig.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/networking/: PregxxyNetworking.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/networking/msg/: MsgSyncConfigS2C.kt  PregxxyMessage.kt
common/src/main/kotlin/io/github/soccyuwu/pregxxy/registry/: PregxxyActions.kt  PregxxyRegistrar.kt
common/src/main/resources/: architectury.common.json  pregxxy-common.mixins.json  pregxxy.accesswidener
common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/spells/: breed_loc.json5  dummy_spells.json5  greater_breed_loc.json5  normal_pattern_loc.json5
common/src/main/resources/assets/pregxxy/lang/: en_us.flatten.json5
common/src/main/resources/data/hexcasting/tags/action/: can_start_enlighten.json  per_world_pattern.json
doc/: README.md  hexdoc.toml
doc/resources/assets/pregxxy/lang/: en_us.flatten.json5
doc/src/hexdoc_pregxxy/: _hooks.py
fabric/: build.gradle.kts
fabric/src/main/java/io/github/soccyuwu/pregxxy/fabric/mixin/: AllayAccessor.java
fabric/src/main/kotlin/io/github/soccyuwu/pregxxy/fabric/: FabricPregxxy.kt  FabricPregxxyClient.kt  FabricPregxxyModMenu.kt  PregxxyAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  pregxxy-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/java/io/github/soccyuwu/pregxxy/forge/mixin/: ForgeMixinConfigPlugin.java  MixinDatagenMain.java
forge/src/main/kotlin/io/github/soccyuwu/pregxxy/forge/: ForgePregxxy.kt  ForgePregxxyClient.kt  PregxxyAbstractionsImpl.kt
forge/src/main/resources/: pack.mcmeta  pregxxy-forge.mixins.json
